--- a/style/style.css
+++ b/style/style.css
@@ -191,11 +191,87 @@ margin-top: 150px;
 }
 .main-section-6-content-1{
     display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 240px 204px;
+
 }
 .section-item{
     display: flex;
+    margin-top: 50px;
+}
+.sectio-5-2{
+    align-items: center;
+    justify-content: center;
+}
+.carrier-button{
+    text-align: left;
 }
 
+        /* gaming section style */
+
+
+.game-section-7{
+    display: grid;
+    grid-template-columns:repeat(5,1fr);
+    align-items: center;
+    justify-content: center;
+    row-gap: 40px;
+    grid-row: span 4;
+    margin-top: 50px;
+
+   
+}
+.game-section-7> div{
+    display: flex;
+}
+/* footer section releted style */
+.footer-section{
+    background-color: #0B0223;
+    border: 3px solid whitesmoke;
+    box-shadow: 0px 1px 8px 20px rgb(151, 146, 146);
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+}
+.footer-section-1{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-section-1> ul{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-section-1 li{
+    list-style: none;
+    color: #c7c2c2;
+    padding: 30px;
+}
+.footer-section-1-1 li{
+    list-style: none;
+    color: #c7c2c2;
+}
+.footer-section-3{
+    display: flex;
+}
+.footer-section-4{
+    display: flex;
+}
+.footer-section-5{
+    display: flex;
+}
+.G{
+    font-weight:700;
+    font-size:2rem;
+    color: #F948B2;
+}
+.amers{
+    color: #c7c2c2;
+    font-weight: 700;
+    font-size: 2rem;
+}
 
 
                 /* responsive style */
@@ -252,8 +328,8 @@ margin-top: 150px;
     .section-4-img
     {
     max-width:90%;
-    padding: auto;
-    margin: auto;
+    padding: 0;
+    margin: 0;
     text-align: center;
     }
     .section-4-img{
@@ -275,9 +351,41 @@ margin-top: 150px;
         height: 200px;
         width: auto;
     }
+    /* carrier section responsive */
     .section-6-carrer{
-        flex-direction: column;
+        flex-direction: column-reverse;
+        max-width: 90%;
+        padding: 10px;
+        margin: 10px;
     }
+    .main-section-6-content-1{
+        padding: 0;
+    }
+    .carrer-img{
+        width: 90%;
+        align-items: center;
+    }
+    .carrier-button{
+        text-align: center;
+
+    }
+    .game-section-7{
+        grid-template-columns: repeat(2,4fr);
+        row-gap: 30px;
+    }
+    .footer-section-1> ul{
+        display: grid;
+        grid-template-columns:repeat(3,2fr);
+    }
+    .footer-section-4> ul{
+        display: grid;
+        grid-template-columns:repeat(2,2fr);
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+
 }
      /* tablet device */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -290,7 +398,16 @@ margin-top: 150px;
         text-align: center;
 
     }
-    .nav-header{
+    .main-section-carrier{
+        flex-direction: column-reverse;
+        width: 90%;
+        padding: 10px;
+        margin: 30px;
+
+    }
+
+    .nav-header
+    {
         flex-direction: column-reverse;
     }
    .main-container-content{
@@ -338,6 +455,10 @@ margin-top: 150px;
             width: auto;
         }
         .section-6-carrer{
-            flex-direction: column;
+            flex-direction: column-reverse;
+        }
+        .game-section-7{
+            grid-template-columns: repeat(3,3fr);
+            row-gap: 30px;
         }
 }
